# pipy

./: .gitignore  Make.rules  Makefile  README.md  pipy.lock.toml  pyproject.toml  requirements.dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: integration.yml
pipy/: __init__.py  __main__.py  components.py  config.py  configuration.py  exceptions.py  packages.py  session.py
pipy/utils/: cli.py  session.py  sh.py
