[build-system]
requires = [
    "setuptools",
    "setuptools_scm"
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120

[tool.pipy]
name = "pipy"
versions = ["3.6", "3.7"]

[[tool.pipy.environments]]
name = "dev"
packages = ["flake8"]

[[tool.pipy.environments]]
name = "prd"
includes = ["dev"]
packages = ["black"]
